--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="textoBotonAcercaDe">Acerca de</string>
     <string name="textoBotonSalir">Salir</string>
     <string name="tituloAplicacion">"Asteroides "</string>
+    <string name="textoAcercaDe">Este programa ha sido desarrollado como ejemplo en el curso de android</string>
 </resources>
