--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="textoBotonSalir">Salir</string>
     <string name="tituloAplicacion">"Asteroides "</string>
     <string name="textoAcercaDe">Este programa ha sido desarrollado como ejemplo en el curso de android</string>
+    <string name="textoBuscar">Buscar</string>
 </resources>
