--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -6,4 +6,9 @@
     <string name="textoBotonAcercaDe">Acerca de</string>
     <string name="textoBotonSalir">Salir</string>
     <string name="tituloAplicacion">"Asteroides "</string>
+
+    <string name="textoAcercaDe">Este programa ha sido desarrollado como ejemplo en el curso de android</string>
+    <string name="textoBuscar">Buscar</string>
+
+
 </resources>
